; ModuleID = '/home/carl/AnghaBench/zfs/tests/zfs-tests/cmd/libzfs_input_check/extr_libzfs_input_check.c_test_release.c'
source_filename = "/home/carl/AnghaBench/zfs/tests/zfs-tests/cmd/libzfs_input_check/extr_libzfs_input_check.c_test_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"libzfs_check_hold\00", align 1
@ZFS_IOC_RELEASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @test_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_release(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = call i32* (...) @fnvlist_alloc()
  store i32* %7, i32** %5, align 8
  %8 = call i32* (...) @fnvlist_alloc()
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @fnvlist_add_boolean(i32* %9, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %11 = load i32*, i32** %5, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @fnvlist_add_nvlist(i32* %11, i8* %12, i32* %13)
  %15 = load i32, i32* @ZFS_IOC_RELEASE, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @IOC_INPUT_TEST_WILD(i32 %15, i8* %16, i32* %17, i32* null, i32 0)
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @nvlist_free(i32* %19)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @nvlist_free(i32* %21)
  ret void
}

declare dso_local i32* @fnvlist_alloc(...) #1

declare dso_local i32 @fnvlist_add_boolean(i32*, i8*) #1

declare dso_local i32 @fnvlist_add_nvlist(i32*, i8*, i32*) #1

declare dso_local i32 @IOC_INPUT_TEST_WILD(i32, i8*, i32*, i32*, i32) #1

declare dso_local i32 @nvlist_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
